fix color contrast of select form fields

--- a/css/style.scss
+++ b/css/style.scss
@@ -165,7 +165,7 @@ span{padding-right: 10px;}
         $select-background-color: transparent;
         $select-border-color: unquote("rgba(#{$color-black}, 0.12)") !default;
         $select-font-size: 16px;
-        $select-color: unquote("rgba(#{$color-black}, 0.26)") !default;
+        $select-color: unquote("rgba(#{$color-black}, 0.6)") !default;
         $select-padding: 4px;
 
 /* ==========  Select Field ========== */
